增加霓虹灯效果界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ImageActivity" />
-        <activity android:name=".CustomView"></activity>
+        <activity android:name=".CustomView" />
+        <activity android:name=".FrameLayoutView"></activity>
     </application>
 
 </manifest>
